# agent2agent-demo

./: .env.example  AGENT_ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  main.py  pyproject.toml  test_execution.py
agents/: __init__.py  agent_coordinator.py  base_agent.py  execution_agent.py  market_agent.py  risk_agent.py
